--- a/site/posts/include/biblio/bib/FFF.bib
+++ b/site/posts/include/biblio/bib/FFF.bib
@@ -7,3 +7,85 @@
 	author = {Andrianakis, Ioannis and Vernon, Ian R. and McCreesh, Nicky and McKinley, Trevelyan J. and Oakley, Jeremy E. and Nsubuga, Rebecca N. and Goldstein, Michael and White, Richard G.},
 	year = {2015},
 	pages = {e1003968}}
+	
+	
+@article{barnes_global_2010,
+	title = {Global patterns in predator-prey size relationships reveal size dependency of trophic transfer efficiency},
+	volume = {91},
+	url = {http://www.esajournals.org/doi/abs/10.1890/08-2061.1},
+	number = {1},
+	urldate = {2014-05-30},
+	journal = {Ecology},
+	author = {Barnes, Carolyn and Maxwell, David and Reuman, Daniel C. and Jennings, Simon},
+	year = {2010},
+	pages = {222--232},
+	file = {Barnes et al 2010 Ecology PPMR Analysis.pdf:/Users/phil/Dropbox/biblio/zotero/storage/WP44QF33/Barnes et al 2010 Ecology PPMR Analysis.pdf:application/pdf;[PDF] from researchgate.net:/Users/phil/Dropbox/biblio/zotero/storage/P67USJN7/Barnes et al. - 2010 - Global patterns in predator-prey size relationship.pdf:application/pdf;Snapshot:/Users/phil/Dropbox/biblio/zotero/storage/JP3UWF33/cookieAbsent.html:text/html}
+}
+
+@article{gibert_temperature_2014,
+	title = {Temperature alters food web body-size structure},
+	volume = {10},
+	url = {http://rsbl.royalsocietypublishing.org/content/10/8/20140473.short},
+	number = {8},
+	urldate = {2015-09-14},
+	journal = {Biology letters},
+	author = {Gibert, Jean P. and DeLong, John P.},
+	year = {2014},
+	pages = {20140473},
+	file = {[HTML] from royalsocietypublishing.org:/Users/phil/Dropbox/biblio/zotero/storage/DKPNXMUZ/20140473.html:text/html}
+}
+
+@article{kondoh_scale_2011,
+	title = {Scale dependence of predator–prey mass ratio: determinants and applications},
+	volume = {45},
+	shorttitle = {Scale dependence of predator–prey mass ratio},
+	url = {https://books.google.co.nz/books?hl=en&lr=&id=7FyxjRyDevkC&oi=fnd&pg=PA269&ots=s_NA06VvXK&sig=7uLrsxDoj9IiLG6gnc1HGRuJCgQ},
+	urldate = {2015-09-14},
+	journal = {The Role of Body Size in Multispecies Systems},
+	author = {KONDOH, MICHIO},
+	year = {2011},
+	pages = {269},
+	file = {[PDF] from ryukoku.ac.jp:/Users/phil/Dropbox/biblio/zotero/storage/8QCN6NH6/KONDOH - 2011 - Scale dependence of predator–prey mass ratio dete.pdf:application/pdf;Snapshot:/Users/phil/Dropbox/biblio/zotero/storage/33WZQ5IS/books.html:text/html}
+}
+
+@article{pinnegar_does_2003,
+	title = {Does diet in {Celtic} {Sea} fishes reflect prey availability?},
+	volume = {63},
+	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1095-8649.2003.00204.x/full},
+	number = {s1},
+	urldate = {2015-09-14},
+	journal = {Journal of Fish Biology},
+	author = {Pinnegar, J. K. and Trenkel, V. M. and Tidd, A. N. and Dawson, W. A. and {others}},
+	year = {2003},
+	pages = {197--212},
+	file = {[PDF] from ifremer.fr:/Users/phil/Dropbox/biblio/zotero/storage/7JV6PBCA/Pinnegar et al. - 2003 - Does diet in Celtic Sea fishes reflect prey availa.pdf:application/pdf;Snapshot:/Users/phil/Dropbox/biblio/zotero/storage/R98RIKBV/full.html:text/html}
+}
+
+@article{scharf_predator_2000,
+	title = {Predator size-prey size relationships of marine fish predators: interspecific variation and effects of ontogeny and body size on trophic-niche breadth},
+	volume = {208},
+	shorttitle = {Predator size-prey size relationships of marine fish predators},
+	url = {http://www.int-res.com/abstracts/meps/v208/p229-248/},
+	doi = {10.3354/meps208229},
+	abstract = {ABSTRACT: We utilized a long-term data base collected over a broad geographic range to examine predator size-prey size relationships for 18 species of marine fish predators from continental shelf waters off the northeast US coast. Regression analysis was used to illustrate interspecific variation in ontogenetic patterns of prey size use, gape allometries, and ratio-based trophic niche breadths. Size-based feeding strategies were assessed through comparison of frequency distributions of relative prey sizes eaten and were related to general predator feeding tactics and gape morphology. The results demonstrated that the range of prey sizes eaten expanded with increasing predator body size for each of the marine predators examined, leading to asymmetric predator size-prey size distributions. Absolute maximum prey size and slopes of maximum prey size versus predator size varied widely among predator taxa. Distinct size-based feeding strategies were evident, as diets of some predators were dominated by prey that were 10 to 20\% of predator size, whereas other predators frequently consumed prey {\textgreater}50\% of predator size. Gape sizes and allometric relationships with body size were also diverse among predators and often were closely associated with maximum prey sizes. Ratio-based trophic-niche breadths generally did not expand with predator ontogeny and tended to narrow for the largest predators, which may be common for animal taxa.},
+	urldate = {2015-09-14},
+	journal = {Marine Ecology Progress Series},
+	author = {Scharf, Frederick S. and Juanes, Francis and Rountree, Rodney A.},
+	month = dec,
+	year = {2000},
+	pages = {229--248},
+	file = {Marine Ecology Progress Series Full Text PDF:/Users/phil/Dropbox/biblio/zotero/storage/HUFV5X26/Scharf et al. - 2000 - Predator size-prey size relationships of marine fi.pdf:application/pdf;Marine Ecology Progress Series Snapshot:/Users/phil/Dropbox/biblio/zotero/storage/Q7GK5KRU/p229-248.html:text/html}
+}
+
+@article{sogard_size-selective_1997,
+	title = {Size-{Selective} {Mortality} in the {Juvenile} {Stage} of {Teleost} {Fishes}: {A} {Review}},
+	volume = {60},
+	shorttitle = {Size-{Selective} {Mortality} in the {Juvenile} {Stage} of {Teleost} {Fishes}},
+	abstract = {Individual variability in body size provides a template for selective mortality processes during early life history stages of teleost fishes. This size variability has generated the logically intuitive hypothesis that larger or faster growing members of a cohort gain a survival advantage over smaller conspecifics via enhanced resistance to starvation, decreased vulnerability to predators, and better tolerance of environmental extremes. This review evaluates field and laboratory studies that have examined size-based differences in survival, with emphasis on the juvenile stage of teleost fishes. The results in general support the "bigger is better" hypothesis, although a number of examples indicate non-selective mortality with no obvious size advantages. The reverse pattern, with enhanced survival of smaller individuals, is rare with the notable exception of bird predation. Major size-selective processes during the juvenile stage include overwinter mortality for temperate species, associated with either starvation or intolerance of physical extremes by smaller members of the young-of-the-year cohort, and predation, with smaller fish more susceptible to successful capture by predators. Most studies examining these processes have used indirect methods to evaluate size-selective mortality, with interpretation of results dependent on several critical assumptions. For methods that track size distributions over time, unbiased samples collected from the same population are critical, and changes in size distributions associated with mortality must be distinguished from changes due to individual growth. The latter requirement can be met with the direct, "characteristics of survivors" method, but few studies have used this approach. Experimental methods isolating specific mechanisms of size-specific mortality must appropriately represent the natural context of environmental factors. Specific predator/prey combinations, for example, can elucidate size-based prey preferences but may be irrelevant compared to the natural, multi-species predator field. The composition of the predator field and its correspondence to size-spectrum theory is crucial to the probability of size-selective predation as a cohort progresses through the juvenile stage. Distinction of selection on body size vs. selection on growth rate has received little attention. However, a number of physiological constraints and ecological trade-offs can place restrictions on growth rates and apparently override the advantages of large body size. Identifying the major sources of mortality and how they operate in the juvenile stage has valuable applications in understanding population dynamics and recruitment variability.},
+	number = {3},
+	journal = {Bulletin of Marine Science},
+	author = {Sogard, Susan M.},
+	month = jul,
+	year = {1997},
+	pages = {1129--1157}
+}
