css with syntax highlighting, first three posts online

--- a/Beta.Rmd
+++ b/Beta.Rmd
@@ -243,6 +243,7 @@ jagsdata <- list(COVS=COVS,
                  NCOVS = ncol(COVS),
                  log_ten_Prey = log10(ppmr.data$Prey.mass),
                  PREY = nrow(ppmr.data),
+                 PREYA = round(seq(1,nrow(ppmr.data),by=100)),
                  HABITATS = n(ppmr.data$habitat),
                  FEEDTYPES = n(ppmr.data$Type.of.feeding.interaction),
                  GEOAREAS = n(ppmr.data$Geographic.location),
@@ -263,13 +264,13 @@ jagsdata <- list(COVS=COVS,
                  ind = nidx(ppmr.data$Individual.ID)
 )
 
-JM <- jags.parallel(model.file = 'taxmodel_HC_pref.R',
-                    n.iter = 150000,
-                    n.burnin = 15000,
+JM2 <- jags.parallel(model.file = 'taxmodel_HC_pref2.R',
+                    n.iter = 155000,
+                    n.burnin = 5000,
                     DIC = T,
                     n.thin = 50,
                     data=jagsdata,
-                    n.chains = 3,
+                    n.chains = 2,
                     parameters.to.save = c('betas',
                                            'sd.ind',
                                            'sd.species',
@@ -283,7 +284,9 @@ JM <- jags.parallel(model.file = 'taxmodel_HC_pref.R',
                                            'family.scale',
                                            'class.scale',
                                            'order.scale',
-                                           'tau',
+                                           'btau',
+                                           'mu_tau',
+                                           'log_ten_Prey_pred',
                                            'familymu',
                                            'speciesmu',
                                            'ordermu',
