--- a/site/posts/include/biblio/bib/FFF.bib
+++ b/site/posts/include/biblio/bib/FFF.bib
@@ -1394,8 +1394,7 @@
 latent Gaussian models using Integrated Nested Laplace
 Approximaxion},
     author = {Havard Rue and Sara Martino and Finn Lindgren and Daniel Simpson and Andrea Riebler and Elias Teixeira Krainski},
-    year = {2014
-+0100)},
+    year = {2014},
     note = {R package version 0.0-1415716338},
   }
 
@@ -1539,14 +1538,14 @@ Approximaxion},
 	file = {Full Text PDF:/Users/phil/Dropbox/biblio/zotero/storage/PIC689EM/Tunney et al. - 2014 - Effects of differential habitat warming on complex.pdf:application/pdf;Snapshot:/Users/phil/Dropbox/biblio/zotero/storage/94VVDM64/8077.html:text/html}
 }
 
-@Manual{Boettiger:rfishbase:2012,
-    title = {rfishbase: R Interface to FishBASE},
-    author = {Carl Boettiger and Duncan {Temple Lang} and Peter C. Wainwright},
-    year = {2012},
-    note = {R package version 0.2-3.99},
+@Manual{Boettiger:rfishbase:2015,
+    title = {rfishbase: R Interface to 'FishBase'},
+    author = {Carl Boettiger and Scott Chamberlain and Duncan {Temple Lang} and Peter Wainwright},
+    year = {2015},
+    note = {R package version 2.0.3.99},
     url = {https://github.com/ropensci/rfishbase},
   }
-
+  
 @Article{Chamberlain:taxize:2013,
   title = {taxize - taxonomic search and retrieval in R},
   journal = {F1000Research},
